[tool.poetry]
name = "mirai-qbot"
version = "0.1.0"
description = "A qbot based on mirai."
authors = ["NekodRider <driver2223@gmail.com>"]
license = "AGPL v3.0"
readme = "README.md"
packages = [{include = "mirai_qbot"}]

[tool.poetry.dependencies]
python = "^3.10"
graia-ariadne = "^0.10.0"
sentry-sdk = "^1.11.1"
gql = "^3.4.0"
requests = "^2.28.1"
matplotlib = "^3.6.2"
playwright = "^1.28.0"
graia-scheduler = "^0.0.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
